--- a/index.html
+++ b/index.html
@@ -10,15 +10,21 @@
 
 <body>
     <div id="pageContainer" class="container">
-        <div class="row">
-            <div id="gameContainer">
-                <div id="green" class="col-xs-6"></div>
-                <div id="red" class="col-xs-6"></div>
-                <div id="yellow" class="col-xs-6"></div>
-                <div id="blue" class="col-xs-6"></div>
-                <div id="controls">
-                    <h1>Simon</h1> </div>
-            </div>
+        <!--  <div class="row"> -->
+        <div id="gameContainer">
+            <div id="green" class="gameSquare"></div>
+            <div id="red" class="gameSquare"></div>
+            <div id="yellow" class="gameSquare"></div>
+            <div id="blue" class="gameSquare"></div>
+        </div>
+        <div id="controls">
+            <h1>Simon Says...</h1>
+            <div id="countContainer">
+                <h2 id="count"></h2> </div>
+            <div id="start">
+                <h3>Start</h3></div>
+            <div id="strict">
+                <h3>Strict</h3></div>
         </div>
         <button id="test">test</button>
     </div>
