--- a/index.html
+++ b/index.html
@@ -11,20 +11,21 @@
     <div id="pageContainer" class="container">
         <!--Game-->
         <div id="gameContainer">
+            
             <div id="green" class="gameSquare"></div>
             <div id="red" class="gameSquare"></div>
             <div id="yellow" class="gameSquare"></div>
             <div id="blue" class="gameSquare"></div>
             <!--Controls-->
-            <div id="controls">
+            <div id="controls" class="row">
                 <h1>Simon Says...</h1>
-                <div id="countContainer">
+                <div id="countContainer" class="col-xs-12">
                     <h2 id="count"></h2> </div>
-                <div id="start">
+                <div id="start" class="col-xs-6">
                     <h3>Start</h3></div>
-                <div id="strict">
+                <div id="strict" class="col-xs-6">
                     <h3>Strict</h3></div>
-            </div>
+            </div> 
         </div>
         <!--Try again-->
         <div id="tryAgain">
@@ -53,6 +54,6 @@
 
 </html>
 <!-- Credits
-1) Background Image: https://static.pexels.com/photos/172289/pexels-photo-172289.jpeg
+1) Background Image: https://static.pexels.com/photos/1942/lights-abstract-bokeh.jpg
 2) jQuery colour animation: https://bitstorm.org/jquery/color-animation/
 -->
